# ac-client

./: .gitignore  COMPLIANCE_REPORT.md  Cargo.toml  Dockerfile.dev  LICENSE  POST_QUANTUM_CRYPTO.md  README.md  SYSTEM_NETWORK_UCI_COMPLIANCE_REPORT.md  TP469_COMPLIANCE_TEST_REPORT.md  TP469_IMPLEMENTATION_REPORT.md  UCI_BACKEND_COMPLETION_REPORT.md  UCI_BACKEND_OPERATIONS.md  UCI_SCHEMA_COMPLIANCE_VERIFICATION.md  build.rs
docker/: openwrt-entrypoint.sh
package/ac-client/: Makefile
package/ac-client/files/: ac-client.init  ac_client.conf
package/kerberos-agent/: Makefile
package/kerberos-agent/files/: config.json  kerberos-agent.init  kerberos-agent.uci  user.json
package/luci-app-aclient/: Makefile
package/luci-app-kerberos-agent/: Makefile
package/luci-app-optimacs-cameras/: Makefile
proto/: acp.proto  usp-msg.proto  usp-record.proto
src/: apply.rs  cam.rs  config.rs  error.rs  gnss.rs  heartbeat.rs  main.rs  tls.rs  util.rs
src/camera/: capture.rs  config.rs  events.rs  live_stream.rs  manager.rs  mod.rs  motion.rs  mqtt_bridge.rs  mqtt_control.rs  onvif_discovery.rs  recording.rs  site_gateway.rs  storage.rs
src/proto/: mod.rs
src/usp/: agent.rs  endpoint.rs  message.rs  mod.rs  record.rs  session.rs
src/usp/dm/: bridge.rs  cameras.rs  device_info.rs  dhcp.rs  firmware.rs  hosts.rs  ip.rs  misc.rs  mod.rs  security.rs  wifi.rs
src/usp/mtp/: mod.rs  mqtt.rs  websocket.rs
src/usp/tp469/: add_delete.rs  error_codes.rs  get_instances.rs  get_supported_dm.rs  mod.rs  notifications.rs  search.rs  subscriptions.rs  tests.rs  (+2 more)
terraform/: README.md  main.tf  terraform.tfvars.example
(+15 files in other folders)
