[package]
name = "ac-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ac-client"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "fs",
    "macros",
    "signal",
    "time",
    "sync",
    "process",
] }
tokio-rustls = "0.26"

# TLS — must match the server's post-quantum provider
rustls              = { version = "0.23", default-features = false, features = ["std"] }
rustls-post-quantum = "0.2"
rustls-pemfile      = "2"

# Protobuf (same version as ac-server)
prost = "0.13"

# MD5 checksums (firmware validation, camera image verification)
md5 = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }

# Logging
log        = "0.4"
syslog     = "7"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow    = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Unix system calls (termios for serial port, process management)
nix  = { version = "0.29", features = ["fs", "process", "term"] }
libc = "0.2"

# Timestamps
chrono = "0.4"

# HTTP client for Axis camera API calls (HTTPS with self-signed certs)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots"] }

# USP / TR-369 — WebSocket and MQTT MTPs
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
rumqttc = "0.24"
uuid    = { version = "1", features = ["v4"] }
url     = "2"

[build-dependencies]
prost-build = "0.13"
